--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       envName:
-        description: 'Environment name'
+        description: 'Deployment to Environment'
         required: true
         default: 'development'
         type: choice
@@ -52,6 +52,7 @@ jobs:
           DEV_TO_TOKEN: ${{ secrets.BUILD_DEV_TO_TOKEN }}
           GOOGLE_TAG_ID: ${{ secrets.GOOGLE_TAG_ID }}
 
+      # Send message to Slack about failed build
       - name: "Slack Notification - Fail"
         if: failure()
         uses: rtCamp/action-slack-notify@v2
@@ -64,41 +65,54 @@ jobs:
           SLACK_MESSAGE: "There was an error in the docker image building process for the Developer Portal: ${{env.ENVIRONMENT}}"
           SLACK_COLOR: ${{ job.status }}
 
-  deploy:
+  dynamic:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - name: Set deployment variables
+        id: dynVar
         run: |
-          if [ $GITHUB_REF == 'refs/heads/master' ] | [${{ inputs.envName }} = 'production']; then
-              echo "DEPLOY_ENV=production" >> "$GITHUB_ENV"
-              echo "DEPLOY_URL=https://farmer.storefrontcloud.io/instance/developer-europe-west1-gcp-storefrontcloud-io" >> "$GITHUB_ENV"
+          DEPLOY_ENV='';
+          DEPLOY_URL='';
+          if [ $GITHUB_REF == 'refs/heads/master' ] | [${{ inputs.envName }} == 'production']; then
+              DEPLOY_ENV="production";
+              DEPLOY_URL="https://farmer.storefrontcloud.io/instance/developer-europe-west1-gcp-storefrontcloud-io";
           fi
-          if [ $GITHUB_REF == 'refs/heads/staging' ] | [${{ inputs.envName }} = 'staging']; then
-              echo "DEPLOY_ENV=staging" >> "$GITHUB_ENV"
-              echo "DEPLOY_URL=https://farmer.storefrontcloud.io/instance/developer-test-europe-west1-gcp-storefrontcloud-io" >> "$GITHUB_ENV"
+          if [ $GITHUB_REF == 'refs/heads/staging' ] | [${{ inputs.envName }} == 'staging']; then
+              DEPLOY_ENV="staging";
+              DEPLOY_URL="https://farmer.storefrontcloud.io/instance/developer-test-europe-west1-gcp-storefrontcloud-io";
           fi
-          if [ $GITHUB_REF == 'refs/heads/development' ] | [${{ inputs.envName }} = 'development']; then
-              echo "DEPLOY_ENV=development" >> "$GITHUB_ENV"
-              echo "DEPLOY_URL=https://farmer.storefrontcloud.io/instance/developer-beta-europe-west1-gcp-storefrontcloud-io" >> "$GITHUB_ENV"
+          if [ $GITHUB_REF == 'refs/heads/development' ] | [${{ inputs.envName }} == 'development']; then
+              DEPLOY_ENV="development";
+              DEPLOY_URL="https://farmer.storefrontcloud.io/instance/developer-beta-europe-west1-gcp-storefrontcloud-io";
           fi
+          echo "::set-output name=deployEnv::DEPLOY_ENV";
+          echo "::set-output name=deployUrl::DEPLOY_URL";
+    outputs:
+      deployEnv: ${{ steps.dynVar.outputs.deployEnv }}
+      deployUrl: ${{ steps.dynVar.outputs.deployUrl }}
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: dynamic
+
+    steps:
       # Start deployment status
       - name: Create GitHub deployment
         uses: bloodf/github-deploy-action@v1
         id: deployment
         with:
-          environment-url: ${{ env.DEPLOY_URL }}
-          environment: ${{ env.DEPLOY_ENV }}
-
+          environment: ${{ needs.dynamic.outputs.deployEnv }}
+          environment-url: ${{ needs.dynamic.outputs.deployUrl }}
+      # Defining the deployment status
       - name: In-progress Status
         uses: bloodf/github-deploy-status@v1
         with:
           environment-url: ${{ steps.deployment.outputs.environment_url }}
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'in_progress'
-
+      # Sending message to Slack Starting process
       - name: "Slack Notification - Starting"
         uses: rtCamp/action-slack-notify@v2
         env:
@@ -107,13 +121,14 @@ jobs:
           SLACK_ICON: https://user-images.githubusercontent.com/1626923/182921494-7d6d0fd1-d83a-4b34-9fcc-1285b165c8a0.png
           SLACK_TITLE: 'Developer Portal - Deployment [Starting]'
           SLACK_FOOTER: 'Vue Storefront - GitHub Slack Bot'
-          SLACK_MESSAGE: 'Starting the deployment of the Developer Portal: ${{ env.DEPLOY_ENV }}'
+          SLACK_MESSAGE: 'Starting the deployment of the Developer Portal: ${{ steps.dynVar.outputs.deployEnv }}'
           SLACK_COLOR: ${{ job.status }}
           MSG_MINIMAL: true
-
       # Deploying image to VSF Cloud
       - name: Deploy to VSF Cloud
         shell: bash
+        env:
+          DEPLOY_URL: ${{ steps.dynVar.outputs.deployUrl }}
         run: |
           echo "Deploying to: $DEPLOY_URL"
           OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' $DEPLOY_URL)
@@ -132,8 +147,8 @@ jobs:
           environment-url: ${{ steps.deployment.outputs.environment_url }}
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'success'
-          description: 'Successful deployment to ${{ env.DEPLOY_ENV }}'
-
+          description: 'Successful deployment to ${{ steps.dynVar.outputs.deployEnv }}'
+      # Sending message to Slack for successful deployment
       - name: "Slack Notification - Success"
         if: success()
         uses: rtCamp/action-slack-notify@v2
@@ -143,10 +158,9 @@ jobs:
           SLACK_ICON: https://user-images.githubusercontent.com/1626923/182921494-7d6d0fd1-d83a-4b34-9fcc-1285b165c8a0.png
           SLACK_TITLE: 'Developer Portal - Deployment [Success]'
           SLACK_FOOTER: 'Vue Storefront - GitHub Slack Bot'
-          SLACK_MESSAGE: 'The new version of the portal is live at ${{ env.DEPLOY_URL }}'
+          SLACK_MESSAGE: 'The new version of the portal is live at ${{ steps.dynVar.outputs.deployUrl }}'
           SLACK_COLOR: ${{ job.status }}
           MSG_MINIMAL: true
-
       # If deployment had any errors
       - name: Failure Status
         if: failure()
@@ -155,8 +169,8 @@ jobs:
           environment-url: ${{ steps.deployment.outputs.environment_url }}
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'error'
-          description: 'There was an error when deploying to the environment: ${{ env.DEPLOY_ENV }}'
-
+          description: 'There was an error when deploying to the environment: ${{ steps.dynVar.outputs.deployEnv }}'
+      # Send message to Slack for failed deployment
       - name: "Slack Notification - Fail"
         if: failure()
         uses: rtCamp/action-slack-notify@v2
@@ -166,5 +180,5 @@ jobs:
           SLACK_ICON: https://user-images.githubusercontent.com/1626923/182921494-7d6d0fd1-d83a-4b34-9fcc-1285b165c8a0.png
           SLACK_TITLE: 'Developer Portal - Deployment [Error]'
           SLACK_FOOTER: 'Vue Storefront - GitHub Slack Bot'
-          SLACK_MESSAGE: 'There was an error when deploying the developer portal in the environment: ${{ env.DEPLOY_ENV }}'
+          SLACK_MESSAGE: 'There was an error when deploying the developer portal in the environment: ${{ steps.dynVar.outputs.deployEnv }}'
           SLACK_COLOR: ${{ job.status }}
